--- a/.drone.yml
+++ b/.drone.yml
@@ -13,14 +13,17 @@ environment:
 #   - pip install -r requirements.txt
 
 steps:
-- name: test
-  image: docker:dind
-  volumes:
-  - name: dockersock
-    path: /var/run
-  commands:
-  - sleep 5 # give docker enough time to start
-  - docker ps -a
+- name: build
+  image: plugins/docker
+  settings:
+    repo: ${REGISTRY}/fstack-be
+    tags:
+      - ${DRONE_COMMIT_SHA:0:8}
+      - latest
+    registry: ${REGISTRY}
+    insecure: true
+  when:
+    event: [push]
 
 services:
 - name: docker
