--- a/.drone.yml
+++ b/.drone.yml
@@ -2,10 +2,6 @@ kind: pipeline
 type: kubernetes # Note, it's where your runners run.
 name: default
 
-
-environment:
-  REGISTRY: 192.168.49.2:5000
-
 # steps:
 # - name: install
 #   image: python:3.12-slim
@@ -13,29 +9,29 @@ environment:
 #   - pip install -r requirements.txt
 
 steps:
-- name: build
-  image: plugins/docker
-  volumes:
-  - name: dockersock
-    path: /var/run
-  settings:
-    repo: ${REGISTRY}/fstack-be
-    tags:
-      - ${DRONE_COMMIT_SHA:0:8}
-      - latest
-    registry: ${REGISTRY}
-    insecure: true
-  when:
-    event: [push]
+  - name: build
+    image: plugins/docker
+    volumes:
+      - name: dockersock
+        path: /var/run
+    settings:
+      repo: 192.168.49.2:5000/fstack-be
+      tags:
+        - ${DRONE_COMMIT_SHA:0:8}
+        - latest
+      registry: 192.168.49.2:5000
+      insecure: true
+    when:
+      event: [push]
 
 services:
-- name: docker
-  image: docker:dind
-  privileged: true
-  volumes:
-  - name: dockersock
-    path: /var/run
+  - name: docker
+    image: docker:dind
+    privileged: true
+    volumes:
+      - name: dockersock
+        path: /var/run
 
 volumes:
-- name: dockersock
-  temp: {}
+  - name: dockersock
+    temp: {}
