debug deploy-prod

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,12 +1,6 @@
 kind: pipeline
 type: kubernetes # Note, it's where your runners run.
-name: default
-
-# steps:
-# - name: install
-#   image: python:3.12-slim
-#   commands:
-#   - pip install -r requirements.txt
+name: build
 
 steps:
   - name: build
@@ -36,3 +30,27 @@ services:
 volumes:
   - name: dockersock
     temp: {}
+---
+kind: pipeline
+type: kubernetes
+name: deploy-prod
+
+trigger:
+  event:
+    - promote
+steps:
+  - name: deploy-prod
+    image: alpine/k8s:1.33.1
+    commands:
+      - kubectl get pods
+      - kubectl set image deployment/fstack-be fstack-be=192.168.49.2:5000/fstack-be:${DRONE_COMMIT_SHA:0:8}
+    environment:
+      KUBECONFIG: /etc/kube/config
+      PROD_NAMESPACE: fstack-prod
+      REGISTRY: 192.168.49.2:5000
+    volumes:
+      - name: kubeconfig
+        path: /etc/kube
+    when:
+      branch: main
+      event: push
