--- a/.drone.yml
+++ b/.drone.yml
@@ -42,6 +42,7 @@ steps:
   - name: deploy-prod
     image: bitnami/kubectl:1.33.1
     commands:
+      - kubectl config set-context --current --namespace=default
       - kubectl cluster-info
       - kubectl get pods
       - kubectl set image deployment/fstack-be fstack-be=192.168.49.2:5000/fstack-be:${DRONE_COMMIT_SHA:0:8}
