--- a/.drone.yml
+++ b/.drone.yml
@@ -56,11 +56,11 @@ steps:
 kind: secret
 name: kube_token # This is the secret name in Drone
 get:
-  path: drone-ci-agent # Name of the Kubernetes Secret
+  path: drone-ci-agent-token # Name of the Kubernetes Secret
   name: token # Key within the Kubernetes Secret
 ---
 kind: secret
 name: kube_ca_cert # This is the secret name in Drone
 get:
-  path: drone-ci-agent # Name of the Kubernetes Secret
+  path: drone-ci-agent-token # Name of the Kubernetes Secret
   name: ca.crt # Key within the Kubernetes Secret
