--- a/.drone.yml
+++ b/.drone.yml
@@ -42,7 +42,9 @@ steps:
   - name: deploy-prod
     image: bitnami/kubectl:1.33.1
     commands:
-      - echo $KUBE_SERVER $KUBE_TOKEN $KUBE_CA_CERT
+      - echo $KUBE_SERVER
+      - echo $KUBE_TOKEN
+      - echo $KUBE_CA_CERT
       - echo "$KUBE_CA_CERT" > /tmp/ca.crt
       - kubectl --server=$KUBE_SERVER --token=$KUBE_TOKEN --certificate-authority=/tmp/ca.crt get deployment
       - kubectl --server=$KUBE_SERVER --token=$KUBE_TOKEN --certificate-authority=/tmp/ca.crt set image deployment/fstack-be fstack-be=192.168.49.2:5000/fstack-be:${DRONE_COMMIT_SHA:0:8}
