--- a/.drone.yml
+++ b/.drone.yml
@@ -4,6 +4,7 @@ name: build-push
 
 steps:
   - name: docker-build
+    pull: if-not-exists
     image: plugins/docker
     environment:
       DOCKER_HOST: tcp://builder.default.svc.cluster.local:2375
