--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,5 @@ requires-python = ">=3.13"
 dependencies = [
     "flask>=3.1.1",
     "gunicorn>=23.0.0",
+    "prometheus-flask-exporter>=0.23.2",
 ]
