--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ click==8.2.1
 colorama==0.4.6 ; sys_platform == 'win32'
     # via click
 flask==3.1.1
-    # via flask-project
+    # via
+    #   flask-project
+    #   prometheus-flask-exporter
 gunicorn==23.0.0
     # via flask-project
 itsdangerous==2.2.0
@@ -22,7 +24,9 @@ markupsafe==3.0.2
     #   werkzeug
 packaging==25.0
     # via gunicorn
-pip==25.2
+prometheus-client==0.22.1
+    # via prometheus-flask-exporter
+prometheus-flask-exporter==0.23.2
     # via flask-project
 werkzeug==3.1.3
     # via flask
